--- a/src/main/resources/templates/user/Order-detail.html
+++ b/src/main/resources/templates/user/Order-detail.html
@@ -110,7 +110,7 @@
       <!-- Dropdown button for actions -->
       <div class="dropdown">
         <button class="action-button">Actions</button>
-        <a th:href="@{'/orderdetails/' + ${order.id}}" class="action-button">View Details</a>
+        <a th:href="@{'/order/viewOrder/'}" class="action-button">View Details</a>
 
 
         <!--        <div class="dropdown-content">-->
