--- a/src/main/resources/templates/admin/main-page.html
+++ b/src/main/resources/templates/admin/main-page.html
@@ -27,7 +27,7 @@
         <li class="users"><a href="/admin/manage/manageUser">User Management</a></li>
         <li class="users"><a href="/ordermanage">Order Management</a></li>
         <li class="users"><a href="/admin/coupons/">CouponManagement</a></li>
-        <li class="users"><a href="/offers/list">OfferMangement</a></li>
+        <li class="users"><a href="/offers/offer">OfferMangement</a></li>
 
 
     </ul>
