--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,8 +53,8 @@
                                 <ul id="navigation">  
                                     <li><a href="index.html">Home</a></li>
                                     <li><a th:href="@{/shopView}">Shop</a></li>
-                                    <li><a href="about.html">Login</a></li>
-                                    <li class="hot"><a href="#">Latest</a>
+<!--                                    <li><a href="about.html">Login</a></li>-->
+<!--                                    <li class="hot"><a href="#">Latest</a>-->
                                         <ul class="submenu">
                                             <li><a th:href="@{/shopView}">Shop</a></li>
                                             <li><a href="product_details.html"> Product Details</a></li>
@@ -70,7 +70,7 @@
                                         <ul class="submenu">
                                             <li><a href="login.html">Login</a></li>
                                             <li><a href="/showProductInCart">Cart</a></li>
-                                            <li><a href="elements.html">Element</a></li>
+                                             <li><a href="elements.html">Element</a></li>
                                             <li><a href="confirmation.html">Confirmation</a></li>
                                             <li><a href="checkout.html">Product Checkout</a></li>
                                         </ul>
@@ -87,8 +87,8 @@
                                         <span class="flaticon-search"></span>
                                     </div>
                                 </li>
-                                <li> <a th:href="@{/profile}"><span class="flaticon-user"></span></a></li>
-                                <li><a href="//showProductInCart"><span class="flaticon-shopping-cart"></span></a> </li>
+                                <li> <a th:href="@{/login}"><span class="flaticon-user"></span></a></li>
+                                <li><a href="/showProductInCart"><span class="flaticon-shopping-cart"></span></a> </li>
                             </ul>
                         </div>
                     </div>
