--- a/src/main/resources/templates/user/NewProfile.html
+++ b/src/main/resources/templates/user/NewProfile.html
@@ -61,6 +61,9 @@
     </head>
 <body>
 <div class="container rounded bg-white mt-5 mb-5">
+    <div th:if="${message}" class="alert-success text-center">
+        <p th:text="${message}" class="text-center"></p>
+    </div>
     <div class="row">
         <div class="col-md-3 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
@@ -70,8 +73,10 @@
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h4 class="text-right">Profile Settings</h4>
                 </div>
+                <a class="btn btn-danger" th:href="@{/referral/refer}">REFER  A PERSON</a>
                 <div class="col-md-6">
                     <label class="labels">Referral Code</label>
+
                     <!-- Display the random number in the input field -->
                     <input type="text" class="form-control" placeholder="Referral Code" th:value="${referralCode}" readonly />
                 </div>
@@ -96,6 +101,8 @@
                             <a class="btn btn-danger" th:href="@{/profile/deleteAddress/{addressId}(addressId = ${add.id})}">delete</a>
                             <!-- HTML link to edit address -->
                             <a class="btn btn-danger" th:href="@{/profile/edit/{addressId}(addressId=${add.id})}">Edit</a>
+                            <a class="btn btn-primary" th:href="@{/user/default-address/set/{addressId}(addressId=${add.id})}" >set default</a>
+
 <!--                            <div class="form-check form-switch">-->
 <!--                                <input class="form-check-input" type="checkbox" th:id="'flexSwitchCheckDefault-' + ${add.id}" th:value="${add.id}" onchange="setDefaultAddress(this)"/>-->
 
@@ -105,6 +112,7 @@
                         </li>
 
                         </ul>
+
 
 
                     </div>
